<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom"
    android:gravity="bottom"
    android:orientation="vertical"
    android:background="@drawable/bg1" >
    <!--android:background="#719bb3ff"-->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_weight="1"
        android:visibility="gone">
        <WebView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/webView" />
    </RelativeLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/buttonpanel"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button android:id="@+id/groupScheduleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_group"
                android:icon="@drawable/ic_action_group"
                />
            <Button android:id="@+id/teacherScheduleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_teacher"
                android:icon="@drawable/ic_action_teacher"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button android:id="@+id/preferencesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_settings"
                android:icon="@drawable/ic_action_settings"
                />
            <Button android:id="@+id/aboutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_about"
                android:icon="@drawable/ic_action_info"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
